5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1671_1105.log
== TEST (2019-04-22 22:36:16) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada", brasao)



-- OUTPUT:
Entrada lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:37:29) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:37:56) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")



-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:42:16) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
if (brasao == "leao"):
	print("Casa: Lannister")
if (brasao == "veado"):
	print("Casa: Baratheon")
if (brasao == "dragao"):
	print("Casa: Targaryen")
if (brasao == "rosa"):
	print("Casa: Tyrell)
if (brasao == "sol"):
	print("Casa: Martell")
if (brasao == "lula"):
	print("Casa: Greyjoy")
if (brasao == "esfolado"):
	print("Casa: Bolton")
if (brasao == "turta"):
	print("Casa: Tully")








-- ERROR:
File "XXXX", line 14
    print("Casa: Tyrell)
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:42:29) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
if (brasao == "leao"):
	print("Casa: Lannister")
if (brasao == "veado"):
	print("Casa: Baratheon")
if (brasao == "dragao"):
	print("Casa: Targaryen")
if (brasao == "rosa"):
	print("Casa: Tyrell")
if (brasao == "sol"):
	print("Casa: Martell")
if (brasao == "lula"):
	print("Casa: Greyjoy")
if (brasao == "esfolado"):
	print("Casa: Bolton")
if (brasao == "turta"):
	print("Casa: Tully")








-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:42:48) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
if (brasao == "leao"):
	print("Casa: Lannister")
if (brasao == "veado"):
	print("Casa: Baratheon")
if (brasao == "dragao"):
	print("Casa: Targaryen")
if (brasao == "rosa"):
	print("Casa: Tyrell")
if (brasao == "sol"):
	print("Casa: Martell")
if (brasao == "lula"):
	print("Casa: Greyjoy")
if (brasao == "esfolado"):
	print("Casa: Bolton")
if (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")







-- OUTPUT:
Entrada: lula
Casa: Greyjoy
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 22:42:54) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
if (brasao == "leao"):
	print("Casa: Lannister")
if (brasao == "veado"):
	print("Casa: Baratheon")
if (brasao == "dragao"):
	print("Casa: Targaryen")
if (brasao == "rosa"):
	print("Casa: Tyrell")
if (brasao == "sol"):
	print("Casa: Martell")
if (brasao == "lula"):
	print("Casa: Greyjoy")
if (brasao == "esfolado"):
	print("Casa: Bolton")
if (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")







-- EXECUTION TIME:
0.185588
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
Brasao invalido
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
Brasao invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:43:10) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
if (brasao == "leao"):
	print("Casa: Lannister")
if (brasao == "veado"):
	print("Casa: Baratheon")
if (brasao == "dragao"):
	print("Casa: Targaryen")
if (brasao == "rosa"):
	print("Casa: Tyrell")
if (brasao == "sol"):
	print("Casa: Martell")
if (brasao == "lula"):
	print("Casa: Greyjoy")
if (brasao == "esfolado"):
	print("Casa: Bolton")
if (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")







-- OUTPUT:
Entrada: lula
Casa: Greyjoy
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 22:43:47) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")







-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 22:43:53) 
-- CODE:
brasao = (input("Descreva o brasao:"))

print ("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")







-- EXECUTION TIME:
0.134437
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
